--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/Whiteboard
-spring.datasource.username=root
-spring.datasource.password=root1234
+spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-01.cleardb.net/heroku_218b184af8a600e?reconnect=true
+spring.datasource.username=ba2b72c64440ed
+spring.datasource.password=fa79b72e
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
